@@ -147,7 +147,7 @@ class JDocumentRendererHead extends JDocumentRenderer
 		// Generate script language declarations.
 		if (count(JText::script())) {
 			$strHtml .= $tab.'<script type="text/javascript">'.$lnEnd;
-			$strHtml .= $tab.'JText='.json_encode(JText::script()).$lnEnd;
+			$strHtml .= $tab.$tab.'JText = '.json_encode(JText::script()).$lnEnd;
 			$strHtml .= $tab.'</script>'.$lnEnd;
 		}
 
